sandbox/output
StringCalculator.java:19: error: variable result might not have been initialized
        return result ;
               ^
1 error
